--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/backgroundSplashScreen"
     android:layout_height="match_parent"
-    tools:context=".Splash">
+    tools:context=".auth.presentation.view.SplashFragment">
 
     <ImageView
         android:id="@+id/imageView2"
