--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,93 +3,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/splash">
+    app:startDestination="@id/SplashFragment">
 
     <fragment
-        android:id="@+id/splash"
-        android:name="com.mostafahelal.atmodrive2.Splash"
+        android:id="@+id/SplashFragment"
+        android:name="com.mostafahelal.atmodrive2.auth.presentation.view.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" >
         <action
-            android:id="@+id/action_splash_to_intro"
-            app:destination="@id/intro"
+            android:id="@+id/action_SplashFragment_to_IntroFragment"
+            app:destination="@id/IntroFragment"
             app:popUpTo="@id/nav_graph"
             app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_SplashFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
-        android:id="@+id/intro"
-        android:name="com.mostafahelal.atmodrive2.Intro"
+        android:id="@+id/IntroFragment"
+        android:name="com.mostafahelal.atmodrive2.auth.presentation.view.IntroFragment"
         android:label="fragment_intro"
         tools:layout="@layout/fragment_intro" >
         <action
-            android:id="@+id/action_intro_to_forgetPassword"
-            app:destination="@id/forgetPassword" />
+            android:id="@+id/action_IntroFragment_to_CreateAccountPersonalInfoFragment"
+            app:destination="@id/CreateAccountPersonalInfoFragment" />
         <action
-            android:id="@+id/action_intro_to_createAccount"
-            app:destination="@id/createAccount" />
+            android:id="@+id/action_IntroFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/forgetPassword"
-        android:name="com.mostafahelal.atmodrive2.ForgetPassword"
-        android:label="fragment_forget_password"
-        tools:layout="@layout/fragment_forget_password" >
-        <action
-            android:id="@+id/action_forgetPassword_to_verify"
-            app:destination="@id/verify" />
-    </fragment>
-    <fragment
-        android:id="@+id/verify"
-        android:name="com.mostafahelal.atmodrive2.Verify"
-        android:label="fragment_verify"
-        tools:layout="@layout/fragment_verify" >
-        <action
-            android:id="@+id/action_verify_to_resetPassword"
-            app:destination="@id/resetPassword" />
-    </fragment>
-    <fragment
-        android:id="@+id/resetPassword"
-        android:name="com.mostafahelal.atmodrive2.ResetPassword"
-        android:label="fragment_reset_password"
-        tools:layout="@layout/fragment_reset_password" />
-    <fragment
-        android:id="@+id/createAccount"
-        android:name="com.mostafahelal.atmodrive2.CreateAccount"
-        android:label="fragment_create_account"
-        tools:layout="@layout/fragment_create_account" >
-        <action
-            android:id="@+id/action_createAccount_to_step2CreateAccount"
-            app:destination="@id/step2CreateAccount" />
-    </fragment>
-    <fragment
-        android:id="@+id/step2CreateAccount"
-        android:name="com.mostafahelal.atmodrive2.Step2CreateAccount"
-        android:label="fragment_step2_create_account"
-        tools:layout="@layout/fragment_step2_create_account" >
-        <action
-            android:id="@+id/action_step2CreateAccount_to_step3CreateAccount"
-            app:destination="@id/step3CreateAccount" />
-    </fragment>
-    <fragment
-        android:id="@+id/step3CreateAccount"
-        android:name="com.mostafahelal.atmodrive2.Step3CreateAccount"
+        android:id="@+id/CreateAccountPersonalInfoFragment"
+        android:name="com.mostafahelal.atmodrive2.auth.presentation.view.CreateAccountPersonalInfoFragment"
         android:label="fragment_step3_create_account"
-        tools:layout="@layout/fragment_step3_create_account" >
+        tools:layout="@layout/fragment_create_account_personal_info" >
         <action
-            android:id="@+id/action_step3CreateAccount_to_step4CreateAccount"
-            app:destination="@id/step4CreateAccount" />
+            android:id="@+id/action_CreateAccountPersonalInfoFragment_to_CreateAccountVehicalInfoFragment"
+            app:destination="@id/CreateAccountVehicalInfoFragment" />
+        <argument
+            android:name="mobile"
+            app:argType="string" />
     </fragment>
     <fragment
-        android:id="@+id/step4CreateAccount"
-        android:name="com.mostafahelal.atmodrive2.Step4CreateAccount"
+        android:id="@+id/CreateAccountVehicalInfoFragment"
+        android:name="com.mostafahelal.atmodrive2.auth.presentation.view.CreateAccountVehicalInfoFragment"
         android:label="fragment_step4_create_account"
-        tools:layout="@layout/fragment_step4_create_account" >
+        tools:layout="@layout/fragment_create_account_vehical_info" >
         <action
-            android:id="@+id/action_step4CreateAccount_to_step5CreateAccount"
-            app:destination="@id/step5CreateAccount" />
+            android:id="@+id/action_CreateAccountVehicalInfoFragment_to_CreateAccountBankInfoFragment"
+            app:destination="@id/CreateAccountBankInfoFragment" />
     </fragment>
     <fragment
-        android:id="@+id/step5CreateAccount"
-        android:name="com.mostafahelal.atmodrive2.Step5CreateAccount"
+        android:id="@+id/CreateAccountBankInfoFragment"
+        android:name="com.mostafahelal.atmodrive2.auth.presentation.view.CreateAccountBankInfoFragment"
         android:label="fragment_step5_create_account"
-        tools:layout="@layout/fragment_step5_create_account" />
+        tools:layout="@layout/fragment_create_account_bank_info" >
+        <action
+            android:id="@+id/action_CreateAccountBankInfoFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.mostafahelal.atmodrive2.auth.presentation.view.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
 </navigation>
