--- a/app/src/main/res/layout/fragment_create_account_personal_info.xml
+++ b/app/src/main/res/layout/fragment_create_account_personal_info.xml
@@ -291,4 +291,14 @@
         app:layout_constraintTop_toBottomOf="@+id/nationalIdFrontImage"
         tools:layout_editor_absoluteX="90dp" />
 
+    <ProgressBar
+        android:id="@+id/personal_info_progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/submit_and_continue_personal" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
