--- a/app/src/main/res/drawable/custom_progressbar.xml
+++ b/app/src/main/res/drawable/custom_progressbar.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <shape>
-        <solid android:color="#00A6A6"/>
-        <corners android:radius="@dimen/_7sdp"/>
-        <gradient android:endColor="#fff"
-            android:centerColor="#00A6A6"
-            android:startColor="#00A6A6"
-            android:useLevel="true"/>
-    </shape>
+    <item android:id="@android:id/background">
+
+        <shape android:shape="rectangle" >
+            <corners android:radius="6dp"/>
+            <solid android:color="#F1F4FA"/>
+        </shape>
+
+    </item>
+
+    <item android:id="@android:id/progress">
+
+        <scale android:scaleWidth="100%">
+            <shape android:shape="rectangle">
+                <corners android:radius="6dp"/>
+                <solid android:color="@color/primary"/>
+            </shape>
+        </scale>
+
 </item>
 </layer-list>
