--- a/app/src/main/res/layout/fragment_create_account_bank_info.xml
+++ b/app/src/main/res/layout/fragment_create_account_bank_info.xml
@@ -34,7 +34,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/guide1"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:orientation="vertical"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:text="@string/step_3"
         android:textSize="@dimen/_12ssp"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintLeft_toRightOf="@id/guide1"
         app:layout_constraintTop_toBottomOf="@+id/appbar" />
 
     <ProgressBar
